[tool.poetry]
name = "glu"
version = "0.1.0"
description = ""
authors = ["AXON <axonasif@gmail.com>"]
license = "GPL-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asyncio = "^3.4.3"
aiohttp = "^3.8.4"
cachetools = "^5.3.0"
gidgethub = "^5.2.1"
pydantic = "^1.10.7"
slack-sdk = "^3.21.3"
rich = "^13.3.5"
snscrape = "^0.6.2.20230320"
openai = "^0.27.7"
requests = "^2.31.0"
aiosqlite = "^0.19.0"
zenpy = "^2.0.47"
google-cloud-bigquery = "^3.20.1"
stripe = "^9.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
