[project]
name = "glu"
version = "0.1.0"
description = "Gluing things together with AI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.9",
    "aiosqlite>=0.20.0",
    "asyncio>=3.4.3",
    "cachetools>=5.5.0",
    "gidgethub>=5.3.0",
    "google-cloud-bigquery>=3.27.0",
    "openai>=1.56.0",
    "pydantic>=2.10.2",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "slack-sdk>=3.33.4",
    "snscrape>=0.7.0.20230622",
    "stripe>=11.3.0",
    "zenpy>=2.0.56",
]

# [build-system]
# requires = ["setuptools", "wheel", "pip"]
# build-backend = "setuptools.build_meta"
